name:                textlocal
version:             0.1.0.0
synopsis:            Haskell wrapper for textlocal SMS gateway
description:         Please see README.md
homepage:            https://github.com/githubuser/textlocal#readme
license:             BSD3
license-file:        LICENSE
author:              Sibi Prabakaran
maintainer:          sibi@psibi.in
copyright:           2016 Sibi Prabakaran
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/textlocal
